Start http2 in ngninx container

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 80 http2 http3 quic;
     server_name localhost;
     root /usr/share/nginx;
     client_max_body_size 128M;
