--- a/specifyweb/frontend/js_src/package.json
+++ b/specifyweb/frontend/js_src/package.json
@@ -43,7 +43,6 @@
     "csv-stringify": "^6.2.0",
     "d3": "^7.6.1",
     "dayjs": "^1.10.7",
-    "eslint-plugin-react": "^7.31.11",
     "globals": "^13.19.0",
     "handsontable": "9.0.0",
     "jquery": "~1.12.0",
@@ -88,6 +87,8 @@
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/underscore": "^1.10.24",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "10.4.5",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
@@ -96,6 +97,7 @@
     "core-js": "^3.23.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.31.0",
+    "eslint-plugin-react": "^7.32.2",
     "gettext-parser": "^6.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
