--- a/specifyweb/frontend/js_src/package.json
+++ b/specifyweb/frontend/js_src/package.json
@@ -24,7 +24,6 @@
     "unitTests": "jest",
     "unitTests:coverage": "jest --coverage",
     "unitTests:watch": "jest --watch",
-    "validateWeblate": "node --loader ts-node/esm lib/localization/__tests__/validateWeblate.js"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.0",
@@ -95,6 +94,7 @@
     "core-js": "^3.23.4",
     "css-loader": "^6.7.1",
     "eslint": "^8.31.0",
+    "fast-xml-parser": "^4.2.2",
     "gettext-parser": "^6.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
