Fix a typo in package.json
Despite JSON being one of my favorite data formats, it's not very
user friendly. JSON5 and JSON6 are better

--- a/specifyweb/frontend/js_src/package.json
+++ b/specifyweb/frontend/js_src/package.json
@@ -23,7 +23,7 @@
     "typecheck": "tsc",
     "unitTests": "jest",
     "unitTests:coverage": "jest --coverage",
-    "unitTests:watch": "jest --watch",
+    "unitTests:watch": "jest --watch"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.0",
