Add additional instructions for django migrations
Fixes #3626

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,13 @@ services:
       - MYSQL_USER=master
       - MYSQL_PASSWORD=master
 
+# When running Specify 7 for the first time, make sure that the
+# MASTER_NAME and MASTER_PASSWORD are the root username and password.
+#
+# This ensures that the Django migrations are run properly the first
+# time. Once you are in the application, you can safely replace
+# these credentials with the master SQL user name and password.
+
   specify7:
     build:
       context: ./.
