--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -246,7 +246,7 @@ jobs:
         if: github.ref != format('refs/heads/{0}', github.event.repository.default_branch)
         working-directory: specifyweb/frontend/js_src
         run: |
-          # TODO: once most errors are fixed remove "set +e" to not ignore errors
+          # TODO: Once most errors are fixed remove "set +e" to not ignore errors
           set +e
           npx eslint --fix --color `echo "${{steps.changed.outputs.changed}}" | tr " " "\n"`
           set -e
