--- a/specifyweb/frontend/js_src/package.json
+++ b/specifyweb/frontend/js_src/package.json
@@ -60,7 +60,8 @@
     "typesafe-i18n": "^5.17.1",
     "typesafe-reducer": "^1.0.3",
     "underscore": "~1.8.3",
-    "xlsx": "~0.16.8"
+    "xlsx": "~0.16.8",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
