--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@
 version: "3.7"
 services:
   mariadb:
-    image: mariadb
+    image: mariadb:10.11
     volumes:
       - "database:/var/lib/mysql"
       - "./seed-database:/docker-entrypoint-initdb.d"
