--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,6 +124,10 @@ jobs:
       - name: Run Mypy type checker
         run: VIRTUAL_ENV=./ve make typecheck
 
+      - name: Delete existing test database (if any). Use if database if corrupted
+        run: |
+          echo "DROP DATABASE IF EXISTS test_SpecifyDB;" | mysql --host=127.0.0.1
+
       - name: Run test suite
         # run: ./ve/bin/python manage.py test --keepdb
         run: ./ve/bin/python manage.py test --noinput
