remove deleting test database action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,10 +124,10 @@ jobs:
       - name: Run Mypy type checker
         run: VIRTUAL_ENV=./ve make typecheck
 
-      - name: Delete existing test database (if any). Use if database is corrupted
-        env:
-          PORT: ${{ job.services.mariadb.ports[3306] }}
-        run: mysql --host=127.0.0.1 --port 3306 -u MasterUser -p'MasterPassword' -e 'DROP DATABASE IF EXISTS test_SpecifyDB;'
+      # - name: Delete existing test database (if any). Use if database is corrupted
+      #   env:
+      #     PORT: ${{ job.services.mariadb.ports[3306] }}
+      #   run: mysql -u MasterUser -p'MasterPassword' -e 'DROP DATABASE IF EXISTS test_SpecifyDB;'
 
       - name: Run test suite
         # run: ./ve/bin/python manage.py test --keepdb
