add github action step for debugging

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,6 +129,9 @@ jobs:
           PORT: ${{ job.services.mariadb.ports[3306] }}
         run: mysql -h 127.0.0.1 -P $PORT -u MasterUser -p'MasterPassword' -e 'DROP DATABASE IF EXISTS test_SpecifyDB;'
 
+      - name: Run Django migration
+        run: ve/bin/python manage.py showmigrations && ve/bin/python manage.py migrate notifications 0002 && ve/bin/python manage.py migrate notifications 0003 && ve/bin/python manage.py test specifyweb.specify.api_tests.ReplaceRecordTests
+      
       - name: Run test suite
         # run: ./ve/bin/python manage.py test --keepdb
         run: ./ve/bin/python manage.py test --noinput
