--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,17 +124,16 @@ jobs:
       - name: Run Mypy type checker
         run: VIRTUAL_ENV=./ve make typecheck
 
-      - name: Delete existing test database (if any). Use if database is corrupted
-        env:
-          PORT: ${{ job.services.mariadb.ports[3306] }}
-        run: mysql -h 127.0.0.1 -P $PORT -u MasterUser -p'MasterPassword' -e 'DROP DATABASE IF EXISTS test_SpecifyDB;'; mysql -h 127.0.0.1 -P $PORT -u MasterUser -p'MasterPassword' -e 'SHOW DATABASES;'
+      # - name: Delete existing test database (if any). Use if database is corrupted
+      #   env:
+      #     PORT: ${{ job.services.mariadb.ports[3306] }}
+      #   run: |
+      #     mysql -h 127.0.0.1 -P $PORT -u MasterUser -p'MasterPassword' -e 'DROP DATABASE IF EXISTS test_SpecifyDB;';
+      #     mysql -h 127.0.0.1 -P $PORT -u MasterUser -p'MasterPassword' -e 'SHOW DATABASES;'
 
-      # - name: Run Django migration
-      #   run: ve/bin/python manage.py showmigrations && ve/bin/python manage.py migrate notifications 0002 && ve/bin/python manage.py migrate notifications 0003 && ve/bin/python manage.py test specifyweb.specify.api_tests.ReplaceRecordTests
-      
       - name: Run test suite
-        # run: ./ve/bin/python manage.py test --keepdb
-        run: ./ve/bin/python manage.py test --verbosity=3 --noinput
+        run: ./ve/bin/python manage.py test --verbosity=3 --keepdb
+        # run: ./ve/bin/python manage.py test --verbosity=3 --noinput
 
   test-front-end:
     name: Run front-end tests
