--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@
 # if you would like to get access
 #
 version: "3.7"
+
 services:
   mariadb:
     image: mariadb:10.11
@@ -22,17 +23,10 @@ services:
       - "127.0.0.1:3306:3306"
     command: --max_allowed_packet=1073741824
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=specify
-      - MYSQL_USER=master
-      - MYSQL_PASSWORD=master
-
-# When running Specify 7 for the first time, make sure that the
-# MASTER_NAME and MASTER_PASSWORD are the root username and password.
-#
-# This ensures that the Django migrations are run properly the first
-# time. Once you are in the application, you can safely replace
-# these credentials with the master SQL user name and password.
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${DATABASE_NAME}
+      - MYSQL_USER=${MASTER_NAME}
+      - MYSQL_PASSWORD=${MASTER_PASSWORD}
 
   specify7:
     build:
@@ -57,20 +51,20 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-      - DATABASE_HOST=mariadb
-      - DATABASE_PORT=3306
-      - DATABASE_NAME=specify
-      - MASTER_NAME=master
-      - MASTER_PASSWORD=master
-      - SECRET_KEY=change this to some unique random string
-      - ASSET_SERVER_URL=http://host.docker.internal/web_asset_store.xml
-      - ASSET_SERVER_KEY=your asset server access key
-      - REPORT_RUNNER_HOST=report-runner
-      - REPORT_RUNNER_PORT=8080
-      - CELERY_BROKER_URL=redis://redis/0
-      - CELERY_RESULT_BACKEND=redis://redis/1
-      - LOG_LEVEL=WARNING
-      - SP7_DEBUG=true
+      - DATABASE_HOST={DATABASE_HOST}
+      - DATABASE_PORT={DATABASE_PORT}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - MASTER_NAME=${MASTER_NAME}
+      - MASTER_PASSWORD=${MASTER_PASSWORD}
+      - SECRET_KEY=${SECRET_KEY}
+      - ASSET_SERVER_URL=${ASSET_SERVER_URL}
+      - ASSET_SERVER_KEY=${ASSET_SERVER_KEY}
+      - REPORT_RUNNER_HOST=${REPORT_RUNNER_HOST}
+      - REPORT_RUNNER_PORT=${REPORT_RUNNER_PORT}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - SP7_DEBUG=${SP7_DEBUG}
 
   webpack:
     build:
@@ -96,20 +90,20 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-      - DATABASE_HOST=mariadb
-      - DATABASE_PORT=3306
-      - DATABASE_NAME=specify
-      - MASTER_NAME=master
-      - MASTER_PASSWORD=master
-      - SECRET_KEY=change this to some unique random string
-      - ASSET_SERVER_URL=http://host.docker.internal/web_asset_store.xml
-      - ASSET_SERVER_KEY=your asset server access key
-      - REPORT_RUNNER_HOST=report-runner
-      - REPORT_RUNNER_PORT=8080
-      - CELERY_BROKER_URL=redis://redis/0
-      - CELERY_RESULT_BACKEND=redis://redis/1
-      - LOG_LEVEL=WARNING
-      - SP7_DEBUG=true
+      - DATABASE_HOST={DATABASE_HOST}
+      - DATABASE_PORT={DATABASE_PORT}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - MASTER_NAME=${MASTER_NAME}
+      - MASTER_PASSWORD=${MASTER_PASSWORD}
+      - SECRET_KEY=${SECRET_KEY}
+      - ASSET_SERVER_URL=${ASSET_SERVER_URL}
+      - ASSET_SERVER_KEY=${ASSET_SERVER_KEY}
+      - REPORT_RUNNER_HOST=${REPORT_RUNNER_HOST}
+      - REPORT_RUNNER_PORT=${REPORT_RUNNER_PORT}
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
+      - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - SP7_DEBUG=${SP7_DEBUG}
 
   redis:
     image: redis
@@ -122,7 +116,7 @@ services:
     environment:
       - SERVER_NAME=host.docker.internal
       - SERVER_PORT=80
-      - ATTACHMENT_KEY=your asset server access key
+      - ATTACHMENT_KEY=${ASSET_SERVER_KEY}
       - DEBUG_MODE=false
 
   specify6:
@@ -138,7 +132,6 @@ services:
       - "static-files:/volumes/static-files:ro"
       - "specify6:/volumes/specify6:ro"
       - "webpack-output:/volumes/webpack-output:ro"
-
       - "./nginx.conf:/etc/nginx/conf.d/default.conf:ro"
 
   report-runner:
