--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-DATABASE_HOST=mariadb
+DATABASE_HOST=host.docker.internal
 DATABASE_PORT=3306
-MYSQL_ROOT_PASSWORD=root
-DATABASE_NAME=specify
+MYSQL_ROOT_PASSWORD=password
+DATABASE_NAME=NHMD_Oct_2023
 # When running Specify 7 for the first time, make sure that the
 # MASTER_NAME and MASTER_PASSWORD are the root username and password.
 #
 # This ensures that the Django migrations are run properly the first
 # time. Once you are in the application, you can safely replace
 # these credentials with the master SQL user name and password.
-MASTER_NAME=master
-MASTER_PASSWORD=master
+MASTER_NAME=root
+MASTER_PASSWORD=password
 # Make sure to change your `SECRET_KEY` before going into production
 SECRET_KEY=change_this_to_some_unique_random_string
 ASSET_SERVER_URL=http://host.docker.internal/web_asset_store.xml
