Set .env to defaults to work OOB

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DATABASE_HOST=host.docker.internal
+DATABASE_HOST=mariadb
 DATABASE_PORT=3306
 MYSQL_ROOT_PASSWORD=password
-DATABASE_NAME=NHMD_Oct_2023
+DATABASE_NAME=specify
 # When running Specify 7 for the first time, make sure that the
 # MASTER_NAME and MASTER_PASSWORD are the root username and password.
 #
