Update user instructions

--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@ DATABASE_HOST=mariadb
 DATABASE_PORT=3306
 MYSQL_ROOT_PASSWORD=password
 DATABASE_NAME=specify
-# When running Specify 7 for the first time, make sure that the
-# MASTER_NAME and MASTER_PASSWORD are the root username and password.
+# When running Specify 7 for the first time or during updates 
+# that require migrations, make sure that the MASTER_NAME and 
+# MASTER_PASSWORD are the root username and password.
 #
 # This ensures that the Django migrations are run properly the first
 # time. Once you are in the application, you can safely replace
