--- a/.env
+++ b/.env
@@ -2,13 +2,12 @@ DATABASE_HOST=mariadb
 DATABASE_PORT=3306
 MYSQL_ROOT_PASSWORD=password
 DATABASE_NAME=specify
-# When running Specify 7 for the first time or during updates 
-# that require migrations, make sure that the MASTER_NAME and 
-# MASTER_PASSWORD are the root username and password.
-#
-# This ensures that the Django migrations are run properly the first
-# time. Once you are in the application, you can safely replace
-# these credentials with the master SQL user name and password.
+# When running Specify 7 for the first time or during updates that 
+# require migrations, ensure that the MASTER_NAME and MASTER_PASSWORD 
+# are set to the root username and password. This will ensure proper 
+# execution of Django migrations during the initial setup. 
+# After launching Specify and verifying the update is complete, you can 
+# safely replace these credentials with the master SQL user name and password.
 MASTER_NAME=root
 MASTER_PASSWORD=password
 # Make sure to set your `SECRET_KEY` to a unique value before going into production
