Add descriptions for `log_level` and `sp7_debug`

--- a/.env
+++ b/.env
@@ -19,5 +19,18 @@ REPORT_RUNNER_HOST=report-runner
 REPORT_RUNNER_PORT=8080
 CELERY_BROKER_URL=redis://redis/0
 CELERY_RESULT_BACKEND=redis://redis/1
+
+# This variable controls the Specify 7 logging level. Possible values
+# are:
+# * DEBUG: Low level system information for debugging purposes.
+# * INFO: General system information.
+# * WARNING: Information describing a minor problem that has occurred.
+# * ERROR: Information describing a major problem that has occurred.
+# * CRITICAL: Information describing a critical problem that has occurred.
 LOG_LEVEL=WARNING
+
+# Set this variable to `true` to run Specify 7 in debug mode. This
+# should only be used during development and troubleshooting and not 
+# during general use. Django applications leak memory when operated 
+# continuously in debug mode.
 SP7_DEBUG=true
