--- a/.env
+++ b/.env
@@ -10,10 +10,10 @@ DATABASE_NAME=specify
 # safely replace these credentials with the master SQL user name and password.
 MASTER_NAME=root
 MASTER_PASSWORD=password
-# Make sure to set your `SECRET_KEY` to a unique value before going into production
+# Make sure to set the `SECRET_KEY` to a unique value
 SECRET_KEY=change_this_to_some_unique_random_string
 ASSET_SERVER_URL=http://host.docker.internal/web_asset_store.xml
-# Make sure to set your `ASSET_SERVER_KEY` to a unique value before going into production
+# Make sure to set the `ASSET_SERVER_KEY` to a unique value
 ASSET_SERVER_KEY=your_asset_server_access_key
 REPORT_RUNNER_HOST=report-runner
 REPORT_RUNNER_PORT=8080
