--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,11 +48,14 @@ jobs:
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "tags=${TAGS}" >> $GITHUB_OUTPUT
           echo "created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
+          
           # Determine the platforms based on the branch
-          if [ "${{ github.ref }}" = "refs/heads/production" ]; then
+          PLATFORMS="linux/amd64"
+          BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}")
+          if [ "$BRANCH_NAME" = "production" ]; then
             PLATFORMS="linux/amd64,linux/arm64"
-          else
-            PLATFORMS="linux/amd64"
+          elif [[ "$BRANCH_NAME" == *arm ]]; then
+            PLATFORMS="linux/arm64"
           fi
           echo "platforms=${PLATFORMS}" >> $GITHUB_ENV
       
