--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,6 +52,8 @@ jobs:
           # Determine the platforms based on the branch
           PLATFORMS="linux/amd64"
           BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}")
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            PLATFORMS="linux/amd64,linux/arm64"
           if [ "$BRANCH_NAME" = "production" ]; then
             PLATFORMS="linux/amd64,linux/arm64"
           elif [[ "$BRANCH_NAME" == *arm ]]; then
