perf: don't load Merging on home page

--- a/specifyweb/frontend/js_src/tsconfig.json
+++ b/specifyweb/frontend/js_src/tsconfig.json
@@ -2,11 +2,7 @@
   /* File Inclusion */
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
-  "files": [
-    "./lib/declarations.d.ts",
-    "./lib/components/Syncer/xmlToString.1.ts",
-    "./lib/components/AppResources/parseXml.ts"
-  ],
+  "files": ["./lib/declarations.d.ts"],
   "compilerOptions": {
     /* Basic Options */
     "isolatedModules": true,
