--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Prepare
         id: prep
+        env:
+          DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
         run: |
           DOCKER_IMAGE=specifyconsortium/specify7-service
           VERSION=noop
@@ -48,9 +50,16 @@ jobs:
           echo "version=${VERSION}" >> $GITHUB_OUTPUT
           echo "tags=${TAGS}" >> $GITHUB_OUTPUT
           echo "created=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+          
+          # Determine the platforms based on the branch
+          PLATFORMS="linux/amd64"
+          REF_NAME=$(echo "${GITHUB_REF#refs/*/}")
+          if [[ $GITHUB_REF == refs/tags/* || "$REF_NAME" = "$DEFAULT_BRANCH" ]]; then
+            PLATFORMS="linux/amd64,linux/arm64"
+          elif [[ "$REF_NAME" == *arm ]]; then
+            PLATFORMS="linux/arm64"
+          fi
+          echo "platforms=${PLATFORMS}" >> $GITHUB_ENV
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -90,4 +99,4 @@ jobs:
             org.opencontainers.image.created=${{ steps.prep.outputs.created }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.licenses=${{ github.event.repository.license.spdx_id }}
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ env.platforms }}
