--- a/specifyweb/frontend/js_src/package.json
+++ b/specifyweb/frontend/js_src/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "//": "All of these should be executed from the js_src directory",
     "localizationTests": "node --loader @swc-node/register/esm lib/localization/__tests__/scanUsages.ts",
+    "postinstall": "check-engine",
     "pullFromWeblate": "node --loader @swc-node/register/esm lib/localization/utils/pull.ts",
     "schema:extract": "node --loader @swc-node/register/esm lib/localization/schema-localization/extract.ts",
     "schema:pullFromWeblate": "node --loader @swc-node/register/esm lib/localization/schema-localization/pull.ts",
@@ -96,6 +97,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "chalk": "^4.1.2",
+    "check-engine": "^1.12.0",
     "commander": "^9.4.1",
     "core-js": "^3.23.4",
     "css-loader": "^6.7.1",
